# HM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConscript  mkdocs.yml
chipset/zephyr/: chipset_zephyr.c
docs/: ART-Pi.md  BTStack.md  CRC.md  Chipset.md  HCI_Tramsport.md  HCI_dataformat.md  TODO.md  artpi_minimal_environment.md  framework.pptx  index.md  nimble.md  qemu.md  requirements.txt  rtthread_qemu_ble.md  rtthread_ubuntu18.04_qemu环境搭建.md  testcases.md
docs/boards/: AP6212A.md  CSR8311.md  Chipset.md  zephyr.hex  zephyr.md
docs/images/: btstack_hci_transport状态图.drawio
examples/: advertisement.c
include/: chipset.h  error.h  hci_transport_h4.h  hci_transport_h4_uart.h  hm_chipset.h  hm_config.h  hm_dump.h  hm_error.h  hm_hci_transport_h4.h  hm_hci_transport_h4_uart.h
porting/: init.c  init.h
porting/btstack/: Makefile.inc  btstack.c  btstack.h  btstack_config.h  btstack_rtthread_hm.c
porting/builds/: Makefile_btstack.inc
porting/chipset/: bcm.c  csr8311.c  zephyr.c
porting/nimble/: nimble.c
porting/os/: CMakeLists.txt
porting/os/include/: os_port.h
porting/os/linux/include/: os_type.h
porting/os/linux/src/: os_mutex.c  os_sem.c  os_task.c  os_uart.c
porting/stack/: btstack.c  btstack_rtthread_hm.c  nimble.c
src/: chipset.c  chipset.h  h4_inner.h  hci_transport_h4.c  hci_transport_h4.h  hci_transport_h4_uart.c  hci_transport_uart.h  hci_transport_uart_linux.c  hm_dump.c  receiver.c
tests/: chipset.c  hci_transport_h4.c  npl_os.c  test.c  test_hci_transport_h4.c
